add destroy friendship and show page

--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -19,6 +19,13 @@
       <td>
         <%= link_to 'Delete', user_stock_path(user_stock), :method => :delete, :data => { :confirm => "Are you sure?" }, :class => "btn btn-xs btn-danger" %>
       </td>
+      <% else %>
+      <td>
+        <% if @user.can_add_stock?(user_stock.ticker) %>
+          <%#= link_to "Add To My Stocks", user_stocks_path(user: @user, stock_ticker: user_stock.ticker, stock_id: user_stock.id ? user_stock.id : ''), :data => { :confirm => "Add to your current stocks?" }, class: 'btn btn-xs btn-success', method: :post %>
+          <span>Add</span>
+        <% end %>
+      </td>
       <% end %>
     </tr>
     <% end %>
